<resources>
    <string name="app_name">TPMS nRF52840</string>
    <string name="tab_main">Главная</string>
    <string name="tab_settings">Настройки</string>
    <string name="searching">Поиск устройства...</string>
    <string name="connecting">Подключение...</string>
    <string name="scanning">Сканирование...</string>
    <string name="connecting_services">Подключено, поиск сервисов...</string>
    <string name="no_devices">Устройства не найдены</string>
    <string name="connected">Подключено: %1$s</string>
    <string name="section_freq">Частота</string>
    <string name="section_emulator">Эмулятор</string>
    <string name="section_sniffer">Сниффер</string>
    <string name="section_battery">Батарея</string>
    <string name="section_log">Лог</string>
    <string name="section_license">Лицензия</string>
    <string name="label_interval">Интервал, сек</string>
    <string name="label_packets">Пакетов/датчик</string>
    <string name="label_batt_cal">Реальное напряжение</string>
    <string name="label_capacity">Ёмкость АКБ, мАч</string>
    <string name="label_id">ID датчика</string>
    <string name="label_pressure">Давление, кПа</string>
    <string name="label_temperature">Температура, °C</string>
    <string name="button_burst">Burst</string>
    <string name="button_sniff_start">Старт</string>
    <string name="button_sniff_stop">Стоп</string>
    <string name="button_apply">Применить</string>
    <string name="button_save">Сохранить</string>
    <string name="button_calibrate">Калибр.</string>
    <string name="button_reset">Сброс</string>
    <string name="button_activate">Активировать</string>
    <string name="button_cancel">Отмена</string>
    <string name="license_key">Ключ (8 hex)</string>
    <string name="license_active">Лицензия активирована</string>
    <string name="license_inactive">Без лицензии</string>
    <string name="button_get_key">Получить ключ по почте</string>
    <string name="license_passed">Лицензия пройдена</string>
    <string name="license_trial">Пробный период: осталось %1$s</string>
    <string name="license_no_block">Лицензия не активна — отправка TX отключена</string>
    <string name="sensor_enabled">Датчик включён</string>
    <string name="sniffer_on">Сниффер: вкл</string>
    <string name="sniffer_off">Сниффер: выкл</string>
    <string name="sniff_found">Найден датчик №%1$d: ID=%2$s</string>
    <string name="sniff_all_found">Все датчики найдены — применено</string>
    <string name="sniff_applied">Применено: %1$d датчиков</string>
    <string name="unit_kpa">кПа</string>
    <string name="unit_c">°C</string>
    <string name="btn_select">Выбрать</string>
    <string name="cmd_key_length">Ключ должен быть 8 hex символов</string>
    <string name="cmd_cal_invalid">Введи реальное напряжение в мВ (например 3540)</string>
    <string name="batt_life_hint_res">Укажи ёмкость, интервал и пакеты</string>
    <string name="batt_life_res">Время работы от АКБ: ≈ %1$s</string>
</resources>